# Raytracing

./: README.md
C++/: CMakeLists.txt  Color.cpp  Color.hpp  Environment.cpp  Environment.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  REngine.cpp  REngine.hpp  Sphere.cpp  Sphere.hpp  Vec3.cpp  Vec3.hpp  a.out  compile.sh  execute.sh  main.cpp  manualcompile.sh  poolscene.txt
Python/: Geometry.py  Image.py  Material.py  Render.py  Scene.py  create_image.py  main.py
