cmake_minimum_required(VERSION 3.1)
project(RAY_TRACING_C++)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(Color Color.cpp)
add_library(Environment Environment.cpp)
add_library(Image Image.cpp)
add_library(Light Light.cpp)
add_library(Material Material.cpp)
add_library(REngine REngine.cpp)
add_library(Sphere Sphere.cpp)
add_library(Vec3 Vec3.cpp)
add_executable(main main.cpp)
target_link_libraries(main Color Environment Image Light Material REngine Sphere Vec3)